Fix link wrapping

--- a/src/Client/css/im.css
+++ b/src/Client/css/im.css
@@ -1034,7 +1034,7 @@ svg.toolbar-action {
 }
 
 .message-content p a {
-    word-wrap: break-word;
+    word-break: break-word
 }
 
 .message p img {
